공지사항 뷰 페이지 css 작업중

--- a/web/resources/admin/assets/libs/css/style.css
+++ b/web/resources/admin/assets/libs/css/style.css
@@ -114,8 +114,8 @@ body {
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    color: #71748d;
-    background-color: #efeff6;
+    color: #000000;
+    background-color: #ffff;
     -webkit-font-smoothing: antialiased;
 }
 
