--- a/web/resources/admin/assets/libs/css/style.css
+++ b/web/resources/admin/assets/libs/css/style.css
@@ -1636,7 +1636,7 @@ Left Navigation Sidebar
     font-size: 14px;
     padding: 12px;
     /* margin-bottom: 2px; */
-    color: #02A79D;
+    color: #00C1B6;
     transition: 0.3s;
 }
 
