--- a/web/resources/user/css/style.css
+++ b/web/resources/user/css/style.css
@@ -107,6 +107,7 @@ ol {
 	padding: 0;
 	margin: 0;
 }
+.reqs_rs
 
 /*---------------------
   Helper CSS
@@ -359,7 +360,9 @@ ol {
 }
 
 .header__logo {
-	padding: 30px 0;
+	padding: 10x 0;
+	width: 200%;
+    height: 600px;
 }
 
 .header__logo a {
