--- a/web/resources/common/css/style.css
+++ b/web/resources/common/css/style.css
@@ -156,13 +156,14 @@ ol {
 
 .primary-btn {
 	display: inline-block;
-	font-size: 15px;
-	padding: 14px 40px 12px;
+	font-size: 10px;
+	padding: 10px 10px 10px 10px;
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #88C417;
-	border-radius: 2px;
+	background: #20df29;
+	border-radius: 1px;
+	border-color: #ffff00;
 	letter-spacing: 1px;
 }
 
@@ -1843,7 +1844,6 @@ ol {
 .blog__item__text {
 	padding-top: 20px;
 	margin : 10px 10px 10px 10px;
-	background-color: blue;
 }
 
 .blog__item__text h3 {
