--- a/web/resources/user/css/style.css
+++ b/web/resources/user/css/style.css
@@ -62,7 +62,14 @@ h6 {
 	width: 40%;
      height: 300px;
 }
-
+btn-yq {
+	 	width: 200px;
+	 	height: 50px;
+	 	background-color : blue;
+	 	font-size : 28px;
+	 	color : white;
+	
+	}
 
   
    
