--- a/web/resources/admin/assets/libs/css/style.css
+++ b/web/resources/admin/assets/libs/css/style.css
@@ -206,8 +206,8 @@ label {
 }
 
 .form-control {
-    display: block;
-    width: 100%;
+    display: inline-block;
+    width: 30%;
     font-size: 14px;
     line-height: 1.42857143;
     color: #71748d;
@@ -252,7 +252,7 @@ select.form-control {
     background-position: 99% 52%;
     background-size: auto;
     background-repeat: no-repeat;
-    background-image: url(/images/down-arrow.png);
+    background-image: url(${ pageContext.servletContext.contextPath }/resources/admin/assets/images/down-arrow.png);
     padding-right: 15px;
     border: 1px solid #d2d2e4;
     border-radius: 2px;
