--- a/web/resources/user/css/style.css
+++ b/web/resources/user/css/style.css
@@ -62,6 +62,12 @@ h6 {
 	width: 40%;
      height: 300px;
 }
+.btn_z {
+	
+	background: #004fff;
+	background: blue;
+	
+}
 btn-yq {
 	 	width: 200px;
 	 	height: 50px;
